[gd_scene load_steps=6 format=3 uid="uid://xmbt05e88gbe"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_8fnhs"]
[ext_resource type="Theme" uid="uid://bt21n7e5vhsxq" path="res://shared/auth_theme.tres" id="2_tbxqa"]
[ext_resource type="FontFile" uid="uid://b4pkdf5nfix06" path="res://shared/fonts/Exo2-Regular.ttf" id="3_8lf7a"]
[ext_resource type="Script" path="res://scripts/base_button.gd" id="3_x0yqu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxxrr"]
bg_color = Color(0.270588, 0.482353, 0.615686, 1)

[node name="Menu" type="Node2D"]
script = ExtResource("1_8fnhs")

[node name="BackgroundPanel" type="Panel" parent="."]
z_index = -10
offset_right = 1280.0
offset_bottom = 728.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bxxrr")

[node name="LoggedInAsLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = 600.0
offset_right = 432.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 20
text = "Logged in as: ..."
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="."]
offset_top = 48.0
offset_right = 1280.0
offset_bottom = 121.0
theme_override_colors/font_color = Color(0.945098, 0.980392, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_8lf7a")
theme_override_font_sizes/font_size = 60
text = "UNTITLED AUTO BATTLER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaderboardLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 448.0
offset_top = 128.0
offset_right = 832.0
offset_bottom = 544.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("3_8lf7a")
theme_override_font_sizes/font_size = 20
text = "LEADERBOARD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayGameButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 456.0
offset_top = 552.0
offset_right = 826.0
offset_bottom = 635.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("2_tbxqa")
theme_override_font_sizes/font_size = 60
text = "PLAY"
script = ExtResource("3_x0yqu")

[node name="LogOutButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 16.0
offset_top = 648.0
offset_right = 200.0
offset_bottom = 707.0
focus_mode = 0
theme = ExtResource("2_tbxqa")
text = "LOG OUT"
script = ExtResource("3_x0yqu")

[connection signal="pressed" from="PlayGameButton" to="." method="_on_play_game_button_pressed"]
[connection signal="pressed" from="LogOutButton" to="." method="_on_log_out_button_pressed"]
